<resources>
    <string name="app_name">乐拍通</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新</string>
    <string name="xlistview_header_hint_loading">加载中...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">加载更多</string>
    <string name="xlistview_footer_hint_ready">松开加载更多</string>
    <string name="scan_back">返回</string>
    <string name="button_cancel">取消</string>
    <string name="button_ok">确认</string>
    <string name="msg_camera_framework_bug">相机繁忙</string>
    <string name="username">用户名</string>
    <string name="pwd">密码</string>
    <string name="pwd_again">重复密码</string>
    <string name="user_login">用户登录</string>
    <string name="login">登录</string>
    <string name="sign">注册</string>
    <string name="forgot">忘记密码?</string>
    <string name="exit">"再按一次退出乐拍通"</string>
    <string name="EM">邮箱/手机</string>
    <string name="send_captcha">发送文本信息</string>
    <string name="scan_sign">注册</string>
    <string name="scan_middle">抓住每一秒美妙回忆</string>
    <string name="scan_login">亲，已经拥有账户了？直接登录吧</string>
    <string name="whatspp">亲，乐拍通的奇妙是这样的……</string>
    <string name="whatsppp">亲，乐拍通+能服务您的影像乐趣……</string>
    <string name="profile">个人资料</string>
    <string name="nn">昵称</string>
    <string name="grender">性别</string>
    <string name="birthday">生日</string>
    <string name="Email">邮箱</string>
    <string name="weixin">微信</string>
    <string name="share_photo">我分享的照片</string>
    <string name="my_order">我的订单</string>
    <string name="order_history">历史订单</string>
    <string name="my_pp">我的乐拍通</string>
    <string name="my_ppp">我的乐拍通+</string>
    <string name="inputCode">输入序列号</string>
    <string name="auto">扫描</string>
    <string name="manual">手动输入</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="confirm">确认</string>
    <string name="back">返回</string>
    <string name="view">View</string>
    <string name="filter">滤镜</string>
    <string name="shop">商店</string>
    <string name="pp">乐拍通+</string>
    <string name="gifts">礼物</string>
    <string name="like_it">热品促销</string>
    <string name="more">查看所有商品</string>
    <string name="hot">商品列表</string>
    <string name="user">用户</string>
    <string name="product_name">产品名称</string>
    <string name="price">价格: </string>
    <string name="detail">product description:product descriptionproduct descriptionproduct description</string>
    <string name="buy">购买</string>
    <string name="buythisphoto">购买数码照片</string>
    <string name="cart">购物车</string>
    <string name="recommend">推荐</string>
    <string name="select">选图</string>
    <string name="selected">选择(0/9)</string>
    <string name="all">所有</string>
    <string name="disall">取消</string>
    <string name="pictureair">PictureAir</string>
    <string name="camera">相机</string>
    <string name="me">我</string>
    <string name="buy_now">立刻购买</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="submitorder">订单确认</string>
    <string name="orderdescription">订单描述</string>
    <string name="revise">修改</string>
    <string name="totalprice">合计:</string>
    <string name="mobile">你的手机号码</string>
    <string name="checkout">确认</string>
    <string name="sample1">样例: 13838382438</string>
    <string name="phone">电话</string>
    <string name="save">保存</string>
    <string name="payment">未支付</string>
    <string name="postadd">邮寄地址</string>
    <string name="add">增加</string>
    <string name="paymentmethod">支付方式</string>
    <string name="ok">确定</string>
    <string name="submitpayment">付款</string>
    <string name="payways">支付方式</string>
    <string name="pay">支付</string>
    <string name="pmtprc">支付 价格：</string>
    <string name="zfbzf">支付宝支付</string>
    <string name="yhkzf">银联支付</string>
    <string name="paypalzf">国际银行支付</string>
    <string name="zfbsm">推荐使用支付宝账号</string>
    <string name="yhksm">支持银联卡支付</string>
    <string name="at">\@</string>
    <string name="inputEmail">请输入你的邮箱</string>
    <string name="all_sel">全部</string>
    <string name="Share">分享</string>
    <string name="down">下载</string>
    <string name="edit">编辑</string>
    <string name="selection">选择 %s</string>
    <string name="down_all">全部\n已经下载</string>
    <string name="down_sel">下载\n已经选中</string>
    <string name="photo_album">我的相册</string>
    <string name="logout">退出</string>
    <string name="submit_opinions">意见反馈</string>
    <string name="clear_cache">清除缓存</string>
    <string name="ppwith">有照片</string>
    <string name="ppwithout">没有照片</string>
    <string name="pppwith">已使用</string>
    <string name="pppwithout">未使用</string>
    <string name="upgrade">升级 </string>
    <string name="preview">礼物预览</string>
    <string name="picture_number">张数(%s)</string>
    <string name="tag_used">标记(%1$d/%2$d)</string>
    <string name="set_head_photo">设置头像</string>
    <string name="ppp_bottom_text">这个乐拍通可以升级和绑定乐拍通+</string>
    <string name="pp_bottom_text">选择同一天的乐拍通</string>
    <string name="pp_ok">确定(%1$d/%2$d)</string>
    <string name="makegift">周边</string>
    <string name="addimage">增加照片</string>
    <string name="number">号码:</string>
    <string name="choosephoto">选择照片</string>
    <string name="postway">运输</string>
    <string name="pickupbycustomer">自提地址：</string>
    <string name="noexpress">无需快递（仅限虚拟物品）</string>
    <string name="expressdelivery">快递</string>
    <string name="address">地址</string>
    <string name="newaddress">新增地址</string>
    <string name="sampleaddress">上海市浦东新区川沙镇川沙路川宏路528号宏图大楼6001室迪彩</string>
    <string name="edit2">编辑</string>
    <string name="name">姓名</string>
    <string name="mobilephone">手机号码</string>
    <string name="telephone">座机</string>
    <string name="province">城市</string>
    <string name="city">区</string>
    <string name="ad">详细地址</string>
    <string name="district">县</string>
    <string name="up_ppp_money">升级成VIP</string>
    <string name="hint_name">输入你的姓名</string>
    <string name="hint_phone">输入你的手机号码</string>
    <string name="hint_telephone">输入你的座机号码</string>
    <string name="hint_address">输入详细地址</string>
    <string name="delete">删除</string>
    <string name="photopassplus">VIP</string>
    <string name="mylocation">我的地址</string>
    <string name="myfavourite">我的最爱</string>
    <string name="cancel1">取消</string>
    <string name="edittitle">点击编辑相册标题</string>
    <string name="magicalbum">奇妙相册</string>
    <string name="product">商品</string>
    <string name="delivery">已付款</string>
    <string name="qq">QQ</string>
    <string name="weichat">微信</string>
    <string name="buythephoto">你还没有购买这张照片</string>
    <string name="loadsuccess">加载成功!</string>
    <string name="nomore">没有数据加载!</string>
    <string name="uploadphotofailed">失败,请再试一次</string>
    <string name="nocontext">输入你的编码</string>
    <string name="selectyourcart">选择你的商品</string>
    <string name="addphoto">请先添加照片</string>
    <string name="china">中国</string>
    <string name="other">其他</string>
    <string name="neednotdownload">此图片早就在你的相册中</string>
    <string name="touchtoclean">亲，触摸即可马上预览您的高清图片哦！</string>
    <string name="frames">边框</string>
    <string name="magicbrush">滤镜</string>
    <string name="decoration">饰品</string>
    <string name="rotate">文字</string>
    <string name="selectionpp">选择乐拍通卡</string>
    <string name="addpp">增加乐拍通</string>
    <string name="scanpp">扫描你的乐拍通</string>
    <string name="scanppp">扫描你的乐拍通+</string>
    <string name="QRCODE">扫描QR码升级</string>
    <string name="input_right_phone_number">请输入正确的电话号码</string>
    <string name="is_taking">正在进行中</string>
    <string name="take_photo_failed">拍照失败</string>
    <string name="cannot_reduce">不能再减少了</string>
    <string name="cannot_change_count">不能修改数量</string>
    <string name="login_success">登陆成功</string>
    <string name="username_null">用户名不存在</string>
    <string name="pw_null">密码不正确</string>
    <string name="upload_failed">上传图片失败</string>
    <string name="user_exist">用户名已经被使用</string>
    <string name="user_not_exist">用户不存在，请注册</string>
    <string name="failed">失败</string>
    <string name="select_your_pp">请选择你的乐拍通</string>
    <string name="noppp_user">用户没有乐拍通+</string>
    <string name="get_ppp_failed">获取乐拍通+失败</string>
    <string name="pay_failed">付款失败</string>
    <string name="add_address">请增加你的地址</string>
    <string name="need_express">重选你的邮寄方式</string>
    <string name="cancel_deal">你取消了支付</string>
    <string name="alipay_error">支付宝错误</string>
    <string name="order_in_progress">订单正在处理中</string>
    <string name="save_success">保存成功</string>
    <string name="photo_selected">此照片已经被选择</string>
    <string name="nophoto_in_PhotoPass">乐拍通相册中没有照片</string>
    <string name="cannot_delete_in_PhotoPass">不能删除</string>
    <string name="select_photos">请选择你的照片</string>
    <string name="share_photo_count">您只能选择一张图片</string>
    <string name="success1">成功</string>
    <string name="pw_is_inconsistency">密码输入不一致!</string>
    <string name="upload_failed_retry">上传失败，再试一次</string>
    <string name="outofrange">超出范围</string>
    <string name="no_space_in_ppp">乐拍通+没有更多的空间</string>
    <string name="add_address_success">增加地址成功!</string>
    <string name="modify_success">地址修改成功!</string>
    <string name="input_name">输入你的名字</string>
    <string name="has_used">已经被使用</string>
    <string name="retry">错误，请再试一次</string>
    <string name="not_open">很快就要到了</string>
    <string name="Tokenexpired">凭证过期，请重新登陆</string>
    <string name="invalidPP">无效的乐拍通</string>
    <string name="invalidPPP">无效的乐拍通+</string>
    <string name="please_login">请登陆</string>
    <string name="please_pay_first">请先支付</string>
    <string name="input_phone_number">输入你的电话号码</string>
    <string name="input_address">输入你的地址</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="bind_failed">绑定失败</string>
    <string name="payment_order">未付款</string>
    <string name="delivery_details">物流详情</string>
    <string name="buy_again">再次购买</string>
    <string name="delivery_order">已付款</string>
    <string name="all_order">已完成</string>
    <string name="order_time">下单时间:</string>
    <string name="order_no">订单编号:</string>
    <string name="product_details">商品详情:</string>
    <string name="order_detail">订单商品:</string>
    <string name="order_information">订单详情:</string>
    <string name="paymethod">支付方式:</string>
    <string name="order_status">订单状态:</string>
    <string name="product_information">商品详情:</string>
    <string name="delivery_info">物流信息:</string>
    <string name="customer">收件人:</string>
    <string name="phone_number">电话号码:</string>
    <string name="deliveryaddress">寄送地址:</string>
    <string name="orderprice">订单总额:</string>
    <string name="productprice">商品价格:</string>
    <string name="shipping">航运:</string>
    <string name="expressltd">快递公司:</string>
    <string name="expressno">快递号码:</string>
    <string name="delivery_detail">物流详情</string>
    <string name="waitpay">待支付</string>
    <string name="haspay">已支付, 等待物流</string>
    <string name="hasdelivery">已发货</string>
    <string name="hassign">已签收</string>
    <string name="orderclose">关闭交易</string>
    <string name="setting">设置</string>
    <string name="download_pictures">下载图片</string>
    <string name="updata_pictures">同步更新相片</string>
    <string name="setting_language">语言切换</string>
    <string name="gprs_download">4G/3G/GPRS 下载</string>
    <string name="wifi_download">WiFi 下载</string>
    <string name="auto_download">Auto 下载</string>
    <string name="reloadphoto">请重新加载此照片</string>
    <string name="dialog_cancel">不用了，谢谢</string>
    <string name="dialog_ok">好的</string>
    <string name="modify">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="notify_password_hint">密码不能小于6位!</string>
    <string name="show_password">显示密码</string>
</resources>