<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/gray_light"
    android:orientation="vertical">
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="30sp"
	    android:padding="5dp"
	    android:background="@color/gray"
	    android:text="@string/inputEmail"/>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/at"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="24sp" />
    </LinearLayout>
    <Button 
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/confirm"
        android:textSize="20sp"
        android:layout_gravity="right"/>

</LinearLayout>