<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pp_light_gray_background">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/pp_blue">

        <ImageView
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingBottom="13dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="13dp"
            android:scaleType="centerInside"
            android:src="@drawable/back_white" />

        <TextView
            android:id="@+id/photopass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large_size" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/login_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <cn.smssdk.gui.EditTextWithClear
            android:id="@+id/otherLogin_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/Email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:textColor="@color/pp_gray"
            android:textColorHint="@color/pp_gray"
            android:textSize="@dimen/text_middle_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/pp_blue" />


        <cn.smssdk.gui.EditTextWithClear
            android:id="@+id/otherLogin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/pwd"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:textColor="@color/pp_gray"
            android:textColorHint="@color/pp_gray"
            android:textSize="@dimen/text_middle_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/pp_blue" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="2dp"
            android:layout_marginTop="10dp"
            android:text="@string/forgot"
            android:textColor="@color/pp_gray"
            android:textSize="@dimen/text_middle_size"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnOtherLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_blue_shape_and_selector"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@drawable/textview_selector_blue_white"
            android:textSize="@dimen/text_middle_size" />

        <Button
            android:id="@+id/sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_sign_shape_and_selector"
            android:padding="10dp"
            android:text="@string/sign"
            android:textColor="@color/pp_blue"
            android:textSize="@dimen/text_middle_size" />

    </LinearLayout>

</RelativeLayout>