<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewSelectRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light" >

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/blue" >

        <ImageView
            android:id="@+id/imageButton_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingBottom="13dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="13dp"
            android:scaleType="centerInside"
            android:src="@drawable/sel2" />

        <ImageView
            android:id="@+id/rlrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingBottom="13dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="13dp"
            android:scaleType="centerInside"
            android:src="@drawable/back_white" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/transparent"
            android:text="@string/select"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/select_tools_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="2dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/select_disall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/edit_album_disall_button"
            android:gravity="center_horizontal|bottom"
            android:text="@string/disall"
            android:textColor="@drawable/textview_selector_onclick"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/select_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/edit_album_all_button"
            android:gravity="center_horizontal|bottom"
            android:text="@string/all"
            android:textColor="@drawable/textview_selector_onclick"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/select_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/edit_album_share_button"
            android:gravity="center_horizontal|bottom"
            android:text="@string/Share"
            android:textColor="@drawable/textview_selector_onclick"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/select_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/edit_album_delete_button"
            android:gravity="center_horizontal|bottom"
            android:text="@string/delete"
            android:textColor="@drawable/textview_selector_onclick"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/select_makegift"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/edit_album_buy_button"
            android:gravity="center_horizontal|bottom"
            android:text="@string/buy"
            android:textColor="@drawable/textview_selector_onclick"
            android:textSize="12sp" />
    </LinearLayout>

    <GridView
        android:id="@+id/gridView_all"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/select_tools_linearlayout"
        android:layout_below="@id/layout1"
        android:background="@color/gray_light"
        android:gravity="center"
        android:horizontalSpacing="5dp"
        android:listSelector="@null"
        android:numColumns="3"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="7dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp" >
    </GridView>

</RelativeLayout>